--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;1,400&display=swap');
+:root {
+  --white-primary: #FAFAFA;
+  --white-dark: #545454;
+  --grey-dark: #000A12;
+  --indigo-btn: #6D55FF;
+
+
+}
+body, html {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 100%;
+  
+}
 body {
+  background: #FAFAFA;
+  /* font-weight: 400; */
+  color: #000000;
+}
+
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+  /* margin: 3rem 0 1.38rem; */
+  /* font-weight: 400; */
+  /* line-height: 1.3; */
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 1.802rem;
+}
+
+h2 {font-size: 1.602rem;}
+
+h3 {font-size: 1.424rem;}
+
+h4 {font-size: 1.266rem;}
+
+h5 {font-size: 1.125rem;}
+
+small, .text_small {font-size: 0.889rem;}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +53,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
