--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
   font-size: 100%;
 }
 body {
-  background: #fafafa;
+  background: var(--white-primary);
   /* font-weight: 400; */
   color: #000000;
 }
